--- a/webapp/src/app/shared/table/table.component.html
+++ b/webapp/src/app/shared/table/table.component.html
@@ -26,6 +26,7 @@
                 <app-table-filters
                     *ngIf="showFilterBtn"
                     style="flex: 1"
+                    [appliedFilters]="filteredArray"
                     [categories]="filterTypeLabels"
                     [categoryOptions]="filterTagLabels"
                     (filterCategorySelected)="filterOptionClick($event)"
