--- a/webapp/src/app/shared/table-filters/table-filter-chip/table-filter-chip.component.html
+++ b/webapp/src/app/shared/table-filters/table-filter-chip/table-filter-chip.component.html
@@ -1,20 +1,20 @@
 <div
-    class="flex flex-align-center table-filter-item"
+    class="flex flex-align-center table-filter-chip"
     cdkOverlayOrigin
     #filterMenu="cdkOverlayOrigin"
 >
     <div (click)="toggleFilterMenu()">
-        <span class="tfi-name"> {{ category }}:&nbsp;</span>
+        <span class="tfc-name"> {{ category }}:&nbsp;</span>
 
-        <span class="tfi-value">
-            <ng-container *ngIf="appliedItems.length === 1; else moreFilters">
-                {{ appliedItems[0].name }}
+        <span class="tfc-value">
+            <ng-container *ngIf="appliedFilters.length === 1; else moreFilters">
+                {{ appliedFilters[0].name }}
             </ng-container>
 
-            <ng-template #moreFilters> {{ appliedItems.length }} Selected </ng-template>
+            <ng-template #moreFilters> {{ appliedFilters.length }} Selected </ng-template>
         </span>
     </div>
-    <mat-icon class="tfi-close-icon" (click)="clearFilter.emit(category)">close</mat-icon>
+    <mat-icon class="tfc-close-icon" (click)="clearFilter.emit(category)">close</mat-icon>
 </div>
 
 <ng-template
@@ -24,13 +24,13 @@
     (overlayOutsideClick)="isFilterMenuShown = false"
     (overlayKeydown)="overlayKeyDown($event)"
 >
-    <ul class="filter-item-menu mat-elevation-z4">
+    <ul class="filter-chip-menu mat-elevation-z4">
         <li>
             <app-table-filter-search [(text)]="filterOptionQuery"></app-table-filter-search>
         </li>
         <li *ngFor="let option of filterOptionsByQuery()">
             <mat-checkbox
-                [checked]="appliedFilters[option]"
+                [checked]="appliedFiltersDict[option]"
                 (change)="updateFilterOption(option, $event.checked)"
             >
                 {{ option }}
