--- a/webapp/src/app/shared/table-filters/table-filter-chip/table-filter-chip.component.html
+++ b/webapp/src/app/shared/table-filters/table-filter-chip/table-filter-chip.component.html
@@ -3,7 +3,7 @@
     cdkOverlayOrigin
     #filterMenu="cdkOverlayOrigin"
 >
-    <div (click)="toggleFilterMenu()">
+    <div class="tfc-text-container" (click)="toggleFilterMenu()">
         <span class="tfc-name"> {{ category }}:&nbsp;</span>
 
         <span class="tfc-value">
